--- a/package.json
+++ b/package.json
@@ -1,46 +1,48 @@
 {
-  "name": "sy8web",
-  "version": "2.3.2",
-  "license": "",
-  "scripts": {
-    "start": "node serve.js",
-    "loc": "http-server -p 9000 -o"
-  },
-  "private": true,
-  "dependencies": {
-    "animate.css": "^3.5.2",
-    "browser-sync": "^2.23.6",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^7.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^6.1.0",
-    "gulp-jshint": "^2.1.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-ng-annotate": "^2.1.0",
-    "gulp-ngmin": "^0.3.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-rev-append": "^0.1.8",
-    "gulp-uglify": "^3.0.2",
-    "imagemin-pngcrush": "^6.0.0",
-    "jquery": "^3.2.1",
-    "jshint": "^2.10.2"
-  },
-  "devDependencies": {
-    "browser-sync": "^2.26.7",
-    "gulp-autoprefixer": "^7.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^6.1.0",
-    "gulp-jshint": "^2.1.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-ng-annotate": "^2.1.0",
-    "gulp-ngmin": "^0.3.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-rev-append": "^0.1.8",
-    "gulp-uglify": "^3.0.2",
-    "imagemin-pngcrush": "^6.0.0",
-    "static-server": "^2.0.4"
-  }
+    "name": "sy8web",
+    "version": "2.3.2",
+    "license": "",
+    "scripts": {
+        "start": "node serve.js",
+        "loc": "http-server -p 9000 -o"
+    },
+    "private": true,
+    "dependencies": {
+        "animate.css": "^3.5.2",
+        "browser-sync": "^2.23.6",
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^7.0.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-imagemin": "^6.1.0",
+        "gulp-jshint": "^2.1.0",
+        "gulp-minify-css": "^1.2.4",
+        "gulp-ng-annotate": "^2.1.0",
+        "gulp-ngmin": "^0.3.0",
+        "gulp-notify": "^3.2.0",
+        "gulp-rename": "^1.4.0",
+        "gulp-rev-append": "^0.1.8",
+        "imagemin-pngcrush": "^6.0.0",
+        "jquery": "^3.2.1",
+        "jshint": "^2.10.2"
+    },
+    "devDependencies": {
+        "browser-sync": "^2.26.7",
+        "gulp-asset-time": "^1.0.0",
+        "gulp-autoprefixer": "^7.0.0",
+        "gulp-clean": "^0.4.0",
+        "gulp-clean-css": "^4.2.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-htmlmin": "^5.0.1",
+        "gulp-image": "^5.1.0",
+        "gulp-jshint": "^2.1.0",
+        "gulp-minify-css": "^1.2.4",
+        "gulp-ng-annotate": "^2.1.0",
+        "gulp-ngmin": "^0.3.0",
+        "gulp-notify": "^3.2.0",
+        "gulp-rev-append": "^0.1.8",
+        "gulp-uglify": "^3.0.2",
+        "gulp-zip": "^5.0.0",
+        "imagemin-pngcrush": "^6.0.0",
+        "static-server": "^2.0.4"
+    }
 }
